--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -191,8 +191,11 @@
                                                             <div class="w-100 d-flex align-items-center">
                                                                 <div>
                                                                     <h6 class="dropdown-header text-primary text-warning font-weight-bolder d-flex align-items-center p-0">
-                                                                        <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/logout}" method="post">
-                                                                            <button class="dropdown-item text-dark" type="submit">
+                                                                        <form class="form-inline my-2 my-lg-0"
+                                                                              action="#" th:action="@{/logout}"
+                                                                              method="post">
+                                                                            <button class="dropdown-item text-dark"
+                                                                                    type="submit">
                                                                                 로그아웃
                                                                             </button>
                                                                         </form>
@@ -254,6 +257,18 @@
                                 <!-- SIGN_UP -->
                                 <li class="nav-item me-1" sec:authorize="isAnonymous()">
                                     <a class="nav-link" href="#" th:href="@{/sign-up}">가입</a>
+                                </li>
+
+                                <!-- ADMIN_MENU -->
+                                <li class="nav-item me-1">
+                                    <a class="nav-link" sec:authorize="hasRole('ROLE_ADMIN')" href="#"
+                                       th:href="@{/admin/menu}">관리자 메뉴</a>
+                                </li>
+
+                                <!-- SELLER_MENU -->
+                                <li class="nav-item me-1">
+                                    <a class="nav-link" sec:authorize="hasRole('ROLE_SELLER')" href="#"
+                                       th:href="@{/seller/menu}">판매자 메뉴</a>
                                 </li>
                             </ul>
                         </div>
@@ -369,8 +384,6 @@
         }());
     </script>
 </div>
-
-
 
 
 </html>
