feat: 상품 조회 기능 및 패키지 구조 변경

--- a/src/main/resources/templates/account/edit-address.html
+++ b/src/main/resources/templates/account/edit-address.html
@@ -74,7 +74,7 @@
     </div>
 </header>
 
-
+<footer th:replace="fragments.html::footer"></footer>
 </body>
 <script th:replace="fragments.html::uiScripts"></script>
 <script th:replace="fragments.html::validate-form"></script>
