--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -128,7 +128,7 @@
         </div>
     </div>
 </div>
-
+<footer th:replace="fragments.html::footer"></footer>
 </body>
 <script th:replace="fragments.html::uiScripts"></script>
 <script th:if="${account != null && !account.emailVerified}">
