--- a/src/main/resources/templates/seller/menu.html
+++ b/src/main/resources/templates/seller/menu.html
@@ -44,7 +44,7 @@
     </div>
 </section>
 
-
+<footer th:replace="fragments.html::footer"></footer>
 </body>
 <script th:replace="fragments.html::uiScripts"></script>
 </html>
