--- a/src/main/resources/templates/admin/category/edit-category.html
+++ b/src/main/resources/templates/admin/category/edit-category.html
@@ -75,6 +75,7 @@
         </div>
     </div>
 </div>
+<footer th:replace="fragments.html::footer"></footer>
 </body>
 <script th:replace="fragments.html::uiScripts"></script>
 <script th:replace="fragments.html::validate-form"></script>
