--- a/src/main/resources/templates/admin/product/new-product.html
+++ b/src/main/resources/templates/admin/product/new-product.html
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 text-center mx-auto">
-                    <h1 class="text-white pt-3 mt-n5">관리자 메뉴 / 상품 수정</h1>
+                    <h1 class="text-white pt-3 mt-n5">관리자 메뉴 / 상품 등록</h1>
                 </div>
             </div>
         </div>
@@ -27,9 +27,9 @@
                     <h3 class="font-weight-bolder text-info text-gradient fadeIn1 fadeInBottom">상품 이미지</h3>
                 </div>
 
-                <div id="current-product-image" class="mt-3 justify-content-center text-center">
+                <div id="current-product-image" class="mt-3">
                     <img th:if="${!#strings.isEmpty(productForm.productImage)}" class="rounded"
-                         th:src="${productForm.productImage}" alt="name"
+                         th:src="${productForm.productImage}" width="600" height="400" alt="name"
                          th:alt="${productForm.productName}"/>
                 </div>
 
@@ -58,11 +58,11 @@
         <div class="col-12 d-flex justify-content-center flex-column">
             <div class="card shadow-xl">
                 <div class="card-header text-left">
-                    <h1 class="font-weight-bolder text-primary text-gradient fadeIn1 fadeInBottom">상품 수정</h1>
+                    <h1 class="font-weight-bolder text-primary text-gradient fadeIn1 fadeInBottom">상품 등록</h1>
                 </div>
                 <div class="card-body">
                     <div class="row justify-content-center">
-                        <form class="needs-validation col-sm-10" action="#" th:action="@{/admin/product/{id}(id=${productForm.id})}"
+                        <form class="needs-validation col-sm-10" action="#" th:action="@{/admin/product/new}"
                               th:object="${productForm}"
                               method="post" novalidate>
 
@@ -120,8 +120,8 @@
 
 
                             <div class="form-group">
-                                <button type="submit" class="btn bg-gradient-info btn-lg w-100 text-lg">
-                                    상품 수정
+                                <button type="submit" class="btn bg-gradient-primary btn-lg w-100 text-lg">
+                                    상품 등록
                                 </button>
                             </div>
                         </form>
@@ -131,6 +131,7 @@
         </div>
     </div>
 </div>
+<footer th:replace="fragments.html::footer"></footer>
 </body>
 <script src="/node_modules/croppie/croppie.js"></script>
 <script th:replace="fragments.html::uiScripts"></script>
